--- a/src/components/Image/Image.module.css
+++ b/src/components/Image/Image.module.css
@@ -14,7 +14,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  border: 1px solid #000;
+  border-bottom: 1px solid green;
+  border-right: 1px solid green;
   display: flex;
   flex-direction: column;
 }
