Display Dropdown for selecting image part

--- a/src/features/Image/Image.module.css
+++ b/src/features/Image/Image.module.css
@@ -22,3 +22,8 @@
   border-bottom: 1px solid green;
   border-right: 1px solid green;
 }
+
+.imageFrame {
+  display: flex;
+  flex-direction: row;
+}
